--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Home</title>
+  </head>
+  <body>
     <h1>Home page</h1>
-    <div>
+    <p>
       ipsum dolor sit amet consectetur adipisicing elit. Dolorum mollitia
-      doloribus quod illum. Et sapiente ipsa incidunt illum, laudantium ab
-      consectetur omnis vel laboriosam, tempora, assumenda facilis dolor?
-      Necessitatibus, architecto!
-    </div>
+      doloribus quod illum.<br />
+      Et sapiente ipsa incidunt illum, laudantium ab consectetur omnis vel
+      laboriosam, tempora <br />, assumenda facilis dolor? Necessitatibus,
+      architecto!
+    </p>
     <a href="/contact.html">contact page</a>
     <a href="/photo.html">photo page</a>
-  </head>
-  <body></body>
+  </body>
 </html>
