--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Contact</title>
+  </head>
+  <body>
     <h1>contact page</h1>
-    <div>
+    <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo hic
       blanditiis, optio sequi cumque assumenda. Amet suscipit beatae voluptates
       nemo repellat minima a quaerat porro, officiis, atque vitae rem numquam.
-    </div>
+    </p>
     <a href="/index.html">home page</a>
     <a href="/photo.html">photo page</a>
-  </head>
-  <body></body>
+  </body>
 </html>
