--- a/photo.html
+++ b/photo.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Photo</title>
   </head>
-  <h1>photo</h1>
-  <img src="/photo.jpeg" alt="" />
-  <a href="/index.html">home page</a>
-  <a href="/contact.html">contact page</a>
-  <body></body>
+  <body>
+    <h1>photo</h1>
+    <img src="/photo.jpeg" alt="" />
+    <a href="/index.html">home page</a>
+    <a href="/contact.html">contact page</a>
+  </body>
 </html>
